force-app/main/default/objects/Product_Affinity__mdt/Product_Affinity__mdt.object-meta.xml
<CustomObject>
    <label>Product Affinity</label>
    <pluralLabel>Product Affinities</pluralLabel>
</CustomObject>