force-app/main/default/objects/Product_Affinity__mdt/fields/Affinity_Message__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Message__c</fullName>
    <label>Affinity Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>