force-app/main/default/objects/Product_Affinity__mdt/fields/Affinity_Strength__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Strength__c</fullName>
    <label>Affinity Strength</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>