force-app/main/default/objects/Product_Affinity__mdt/fields/Related_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Code__c</fullName>
    <label>Related Product Code</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>