force-app/main/default/objects/Product_Affinity__mdt/fields/Source_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Product_Code__c</fullName>
    <label>Source Product Code</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>